# plugin-publish

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: converter.rs  host_bridge.rs  host_fs.rs  lib.rs  namespace_client.rs  publish_plugin.rs  state.rs
src/publish/: body_renderer.rs  content_provider.rs  email_format.rs  fs_content_provider.rs  html_format.rs  html_format_css.css  mod.rs  publish_format.rs  publisher.rs  types.rs
