[package]
name = "diaryx_publish_extism"
version = "0.1.4"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = { version = "1.3.2", features = ["html-publish"] }
diaryx_plugin_sdk = { version = "0.1.0", features = ["core", "http", "events", "plugins", "wasi", "getrandom-shim"] }
pathdiff = "0.2"
async-trait = "0.1"
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

[patch.crates-io]
getrandom = { git = "https://github.com/diaryx-org/plugin-sdk.git", subdirectory = "patches/getrandom-0.2" }

[profile.release]
lto = "fat"
codegen-units = 1
