[package]
name = "diaryx_publish_extism"
version = "0.1.6"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = { version = "1.3.2" }
comrak = "0.49"
diaryx_plugin_sdk = { version = "0.3.0", features = ["core", "http", "namespaces", "events", "plugins", "wasi", "getrandom-shim"] }
pathdiff = "0.2"
async-trait = "0.1"
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
urlencoding = "2"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
futures-lite = "2"

[patch.crates-io]
getrandom = { git = "https://github.com/diaryx-org/plugin-sdk.git", subdirectory = "patches/getrandom-0.2" }
diaryx_plugin_sdk = { path = "../plugin-sdk" }
diaryx_core = { path = "../diaryx/crates/diaryx_core" }

[profile.release]
lto = "fat"
codegen-units = 1
